@@ -1,3 +1,8 @@
+Sat Nov  1 09:56:10 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
+
+	* orbsvcs/examples/RtEC/Kokyu/Service.cpp: Added fixes to get rid
+	  of link errors in Debian_NoInterceptor build.
+
 Sat Nov  1 05:40:21 UTC 2003  Don Hinton  <dhinton@dresystems.com>
 
         * examples/Buffered_Oneways/server.cpp:
